feat: Updated code to use EJB remote calls fix: Fixed uncompatible DTO's in compte-courant views